--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-Hello World
+.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wing AI - Your Intelligent Assistant</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body>
+    <nav>
+        <div class="logo">Wing AI</div>
+        <div class="nav-links">
+            <a href="#features">Features</a>
+            <a href="#trial">Try Now</a>
+        </div>
+    </nav>
+
+    <header class="hero">
+        <h1>Managing Life Just Got Easier</h1>
+        <p>Your intelligent assistant that understands, responds, and streamlines your daily routines</p>
+        <button class="cta-button">Start Free Trial</button>
+    </header>
+
+    <section id="features" class="features">
+        <h2>What Can Your AI Assistant Do?</h2>
+        <div class="feature-grid">
+            <div class="feature-card">
+                <i class="fas fa-wallet"></i>
+                <h3>Effortless Budgeting</h3>
+                <p>Track spending and receive AI-driven financial insights</p>
+            </div>
+            <div class="feature-card">
+                <i class="fas fa-calendar"></i>
+                <h3>Smart Scheduling</h3>
+                <p>Stay organized with AI-powered reminders</p>
+            </div>
+            <div class="feature-card">
+                <i class="fas fa-heart"></i>
+                <h3>Health & Wellness</h3>
+                <p>Track workouts, nutrition, and mindfulness</p>
+            </div>
+            <div class="feature-card">
+                <i class="fas fa-file-alt"></i>
+                <h3>Document Organization</h3>
+                <p>AI-driven categorization and summaries</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="trial" class="trial">
+        <h2>Simplify Your Life Today!</h2>
+        <p>Start your free trial and experience the future of personal assistance</p>
+        <button class="cta-button">Get Started</button>
+    </section>
+
+    <script src="script.js"></script>
+</body>
+</html>
