--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,6 +21,19 @@
         <p>Your intelligent assistant that understands, responds, and streamlines your daily routines</p>
         <button class="cta-button">Start Free Trial</button>
     </header>
+
+    <section id="showcase" class="carousel-section">
+        <h2>Experience Wing AI</h2>
+        <div class="carousel">
+            <div class="slides">
+                <img src="screen1.jpg" alt="Financial Dashboard">
+                <img src="screen2.jpg" alt="Health Tracking">
+                <img src="screen3.jpg" alt="Task Management">
+            </div>
+            <button class="carousel-prev">←</button>
+            <button class="carousel-next">→</button>
+        </div>
+    </section>
 
     <section id="features" class="features">
         <h2>What Can Your AI Assistant Do?</h2>
@@ -54,6 +66,31 @@
         <p>Start your free trial and experience the future of personal assistance</p>
         <button class="cta-button">Get Started</button>
     </section>
+
+    <section id="support" class="support">
+        <div class="support-container">
+            <h2>Need Help?</h2>
+            <p>We're here to support you every step of the way</p>
+            <div class="support-grid">
+                <a href="mailto:brendan@learnfusion.ai" class="support-card">
+                    <i class="fas fa-envelope"></i>
+                    <h3>Email Support</h3>
+                    <p>Get direct assistance</p>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-links">
+                <a href="https://support.wingai.app">Support</a>
+                <a href="/privacy">Privacy Policy</a>
+                <a href="/terms">Terms of Service</a>
+            </div>
+            <p class="copyright">© 2024 Wing AI. All rights reserved.</p>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
