--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="footer-container">
             <div class="footer-links">
                 <a href="https://support.wingai.app">Support</a>
-                <a href="/privacy">Privacy Policy</a>
+                <a href="privacy.html">Privacy Policy</a>
                 <a href="/terms">Terms of Service</a>
             </div>
             <p class="copyright">© 2024 Wing AI. All rights reserved.</p>
