--- a/privacy.html
+++ b/privacy.html
@@ -3,21 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Privacy Policy for Wing AI App">
-    <title>Privacy Policy - Wing AI</title>
+    <title>Privacy Policy</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 20px;
-            padding: 20px;
+            padding: 0;
+        }
+        h1, h2 {
             color: #333;
         }
-        h1, h2, h3 {
-            color: #0056b3;
-        }
         a {
-            color: #0056b3;
+            color: #007BFF;
             text-decoration: none;
         }
         a:hover {
@@ -27,72 +25,89 @@
 </head>
 <body>
     <h1>Privacy Policy</h1>
-    <p>Effective Date: 1/31/25</p>
+    <p>Effective Date: January 31, 2025</p>
 
-    <p>Wing AI ("we," "our," or "us") is committed to protecting your privacy. This Privacy Policy describes how we collect, use, and share your information when you use our mobile application (the "App") and related services (collectively, the "Services").</p>
+    <p>
+        This Privacy Policy describes how Wing AI ("we," "our," or "us") collects, uses, and protects your information. By using our application, you agree to this policy.
+    </p>
 
-    <h2>1. Information We Collect</h2>
-    <h3>1.1 Information You Provide to Us</h3>
-    <p>When you use our Services, you may provide us with the following types of information:</p>
+    <h2>Information We Collect</h2>
+    <p>
+        When you use Wing AI, we may collect the following types of information:
+    </p>
     <ul>
-        <li><strong>Personal Information:</strong> Name, email address, or other contact information when you create an account or contact support.</li>
-        <li><strong>Financial Data:</strong> If you use budgeting features, you may provide details about your expenses or income. This data is securely stored and never shared without your consent.</li>
+        <li><strong>Personal Information:</strong> Information you provide when creating an account, such as your name, email address, and payment details.</li>
+        <li><strong>Usage Data:</strong> Information about your use of the app, including interactions, preferences, and app activity.</li>
+        <li><strong>Health Data:</strong> Data you input related to your fitness, nutrition, and wellness. This information is collected only with your explicit consent.</li>
     </ul>
 
-    <h3>1.2 Information We Collect Automatically</h3>
-    <p>When you use our App, we may collect certain information automatically, including:</p>
+    <h2>How We Use Your Information</h2>
+    <p>Your information is used to:</p>
     <ul>
-        <li>Device Information: Device type, operating system, and app version.</li>
-        <li>Usage Data: Interactions with the App, features used, and preferences.</li>
-        <li>Location Data: Approximate location, if enabled, to provide localized features.</li>
+        <li>Provide personalized services, including financial management, scheduling, and health insights.</li>
+        <li>Improve app performance and functionality through analytics.</li>
+        <li>Communicate updates, subscription details, and promotional offers (with your consent).</li>
+        <li>Comply with legal obligations and enforce our terms of use.</li>
     </ul>
 
-    <h3>1.3 Information from Third Parties</h3>
-    <p>We may receive information from third-party services, such as authentication providers (e.g., Apple or Google Sign-In).</p>
-
-    <h2>2. How We Use Your Information</h2>
-    <p>We use your information to:</p>
+    <h2>Subscriptions</h2>
+    <p>
+        Wing AI offers a monthly subscription at $7.99, which includes:
+    </p>
     <ul>
-        <li>Provide and improve the Services.</li>
-        <li>Personalize your experience within the App.</li>
-        <li>Send you updates, notifications, and support communications.</li>
-        <li>Analyze usage trends to improve functionality.</li>
+        <li>Unlimited access to all app features.</li>
+        <li>AI-powered personal assistance for finances, scheduling, health, and more.</li>
+        <li>Priority customer support.</li>
+    </ul>
+    <p>
+        Subscriptions renew automatically unless canceled at least 24 hours before the end of the current period. Payment will be charged to your Apple ID account at confirmation of purchase. You can manage your subscription and turn off auto-renewal in your Account Settings.
+    </p>
+
+    <h2>Health and Medical Information</h2>
+    <p>
+        Wing AI provides health and wellness insights for informational purposes only. These insights are not a substitute for professional medical advice. Always consult a healthcare professional for medical concerns. Sources for health-related information include:
+    </p>
+    <ul>
+        <li><a href="https://www.who.int/" target="_blank">World Health Organization</a></li>
+        <li><a href="https://www.nih.gov/" target="_blank">National Institutes of Health</a></li>
+        <li><a href="https://www.ncbi.nlm.nih.gov/" target="_blank">National Center for Biotechnology Information</a></li>
     </ul>
 
-    <h2>3. How We Share Your Information</h2>
-    <p>We do not sell your personal information. We may share your information in the following circumstances:</p>
+    <h2>Data Sharing</h2>
+    <p>We do not sell your data. Your information may be shared with third parties only in the following cases:</p>
     <ul>
-        <li><strong>With Service Providers:</strong> Third-party vendors who assist us in delivering the Services (e.g., analytics providers or cloud storage services).</li>
-        <li><strong>For Legal Compliance:</strong> If required to comply with applicable laws or legal processes.</li>
-        <li><strong>With Your Consent:</strong> If you explicitly agree to share your information with third parties.</li>
+        <li>To provide services (e.g., payment processors).</li>
+        <li>To comply with legal requirements.</li>
+        <li>To protect our rights or prevent fraud.</li>
     </ul>
 
-    <h2>4. Your Data Protection Rights</h2>
-    <p>You have the following rights regarding your personal data:</p>
+    <h2>Data Security</h2>
+    <p>
+        We employ industry-standard security measures to protect your data. However, no system is completely secure, and we cannot guarantee absolute security.
+    </p>
+
+    <h2>Your Rights</h2>
+    <p>You have the right to:</p>
     <ul>
-        <li>Access and update your information through the App.</li>
-        <li>Request deletion of your data by contacting us at [Insert Support Email].</li>
-        <li>Withdraw consent for data processing where applicable.</li>
+        <li>Access and update your personal information.</li>
+        <li>Request the deletion of your data.</li>
+        <li>Withdraw consent for data collection at any time.</li>
     </ul>
+    <p>To exercise these rights, contact us at <a href="mailto:brendan@learnfusion.ai">brendan@learnfusion.ai</a>.</p>
 
-    <h2>5. Data Security</h2>
-    <p>We take reasonable measures to protect your information from unauthorized access, loss, or misuse. However, no system is completely secure, and we cannot guarantee absolute security.</p>
+    <h2>Changes to This Policy</h2>
+    <p>
+        We may update this Privacy Policy from time to time. Changes will be posted in the app and on our website. Your continued use of the app constitutes acceptance of the updated policy.
+    </p>
 
-    <h2>6. Children’s Privacy</h2>
-    <p>The App is not intended for children under 13. We do not knowingly collect personal information from children under 13. If we become aware of such data, we will delete it promptly.</p>
-
-    <h2>7. International Users</h2>
-    <p>If you access the App from outside [Your Country], your information may be transferred to and processed in a country with different data protection laws.</p>
-
-    <h2>8. Changes to This Privacy Policy</h2>
-    <p>We may update this Privacy Policy from time to time. The updated policy will be posted on this page with the "Effective Date" updated accordingly. We encourage you to review this page periodically for the latest information.</p>
-
-    <h2>9. Contact Us</h2>
-    <p>If you have any questions about this Privacy Policy, please contact us:</p>
-    <ul>
-        <li>Email: brendan@learnfusion.ai</li>
-    </ul>
-
-    <p>Thank you for trusting Wing AI.</p>
+    <h2>Contact Us</h2>
+    <p>
+        If you have questions about this Privacy Policy, please contact us at:
+    </p>
+    <p>
+        <strong>Wing AI Support</strong><br>
+        Email: <a href="mailto:brendan@learnfusion.ai">brendan@learnfusion.ai</a><br>
+        Website: <a href="https://brendanpy.github.io/">https://brendanpy.github.io/</a>
+    </p>
 </body>
 </html>
