--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wing AI - Your Intelligent Assistant</title>
+    <title>DocuGPT - Your Document AI Assistant</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -12,8 +13,8 @@
     <nav class="glass-nav">
         <div class="nav-container">
             <div class="logo">
-                <img src="logo.png" alt="Wing AI Logo">
-                <span>Wing AI</span>
+                <img src="logo.png" alt="DocuGPT Logo">
+                <span>DocuGPT</span>
             </div>
             <div class="nav-links">
                 <a href="#features">Features</a>
@@ -27,8 +28,8 @@
     <header class="hero-section">
         <div class="hero-container">
             <div class="hero-content">
-                <h1>Wing AI: <span class="gradient-text">Fly Through Your Day with Ease</span></h1>
-                <p>Your intelligent assistant that understands and streamlines your daily routines</p>
+                <h1>DocuGPT: <span class="gradient-text">Unlock the Power of Your Documents</span></h1>
+                <p>Your AI-powered document assistant that understands, summarizes, and organizes your files.</p>
                 <div class="hero-buttons">
                     <button class="cta-button">Start Free Trial</button>
                     <button class="secondary-button">Watch Demo</button>
@@ -41,9 +42,9 @@
                         <div class="device-screen">
                             <div class="carousel">
                                 <div class="slides">
-                                    <img src="screen1.jpg" alt="Financial Dashboard">
-                                    <img src="screen2.jpg" alt="Health Tracking">
-                                    <img src="screen3.jpg" alt="Task Management">
+                                    <img src="screen1.jpg" alt="Document Summarization">
+                                    <img src="screen2.jpg" alt="Intelligent Organization">
+                                    <img src="screen3.jpg" alt="Chat with Documents">
                                 </div>
                             </div>
                         </div>
@@ -59,34 +60,34 @@
 
 
     <section id="features" class="features">
-        <h2>What Can Your AI Assistant Do?</h2>
+        <h2>What Can DocuGPT Do For You?</h2>
         <div class="feature-grid">
             <div class="feature-card">
-                <i class="fas fa-wallet"></i>
-                <h3>Effortless Budgeting</h3>
-                <p>Track spending and receive AI-driven financial insights</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-calendar"></i>
-                <h3>Smart Scheduling</h3>
-                <p>Stay organized with AI-powered reminders</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-heart"></i>
-                <h3>Health & Wellness</h3>
-                <p>Track workouts, nutrition, and mindfulness</p>
-            </div>
-            <div class="feature-card">
                 <i class="fas fa-file-alt"></i>
-                <h3>Document Organization</h3>
-                <p>AI-driven categorization and summaries</p>
+                <h3>Smart Summarization</h3>
+                <p>Get concise summaries of lengthy documents</p>
+            </div>
+            <div class="feature-card">
+                <i class="fas fa-folder-open"></i>
+                <h3>Intelligent Organization</h3>
+                <p>Automatically categorize and tag your documents</p>
+            </div>
+            <div class="feature-card">
+                <i class="fas fa-comments"></i>
+                <h3>Chat with Documents</h3>
+                <p>Ask questions and get answers directly from your files</p>
+            </div>
+            <div class="feature-card">
+                <i class="fas fa-search"></i>
+                <h3>Advanced Search</h3>
+                <p>Find what you need quickly with semantic search</p>
             </div>
         </div>
     </section>
 
     <section id="trial" class="trial">
-        <h2>Simplify Your Life Today!</h2>
-        <p>Start your free trial and experience the future of personal assistance</p>
+        <h2>Transform Your Document Workflow Today!</h2>
+        <p>Start your free trial and experience the future of document management</p>
         <button class="cta-button">Get Started</button>
     </section>
 
@@ -95,22 +96,22 @@
             <h2>Need Help?</h2>
             <p>We're here to support you every step of the way</p>
             <div class="support-grid">
-                <a href="mailto:brendan@learnfusion.ai" class="support-card">
+                <a href="mailto:support@docuchat.app" class="support-card">
                     <i class="fas fa-envelope"></i>
                     <h3>Email Support</h3>
                     <p>Get direct assistance from our support team</p>
                 </a>
-                <a href="https://support.wingai.app" class="support-card">
+                <a href="https://support.docuchat.app" class="support-card">
                     <i class="fas fa-book"></i>
                     <h3>Documentation</h3>
                     <p>Browse our detailed guides and FAQs</p>
                 </a>
-                <a href="https://community.wingai.app" class="support-card">
+                <a href="https://community.docuchat.app" class="support-card">
                     <i class="fas fa-users"></i>
                     <h3>Community</h3>
                     <p>Join our user community for tips and support</p>
                 </a>
-                <a href="https://support.wingai.app/tutorials" class="support-card">
+                <a href="https://support.docuchat.app/tutorials" class="support-card">
                     <i class="fas fa-video"></i>
                     <h3>Video Tutorials</h3>
                     <p>Watch step-by-step video guides</p>
@@ -122,11 +123,11 @@
     <footer>
         <div class="footer-container">
             <div class="footer-links">
-                <a href="https://support.wingai.app">Support</a>
+                <a href="https://support.docuchat.app">Support</a>
                 <a href="privacy.html">Privacy Policy</a>
-                <a href="/terms">Terms of Service</a>
+                <a href="terms.html">Terms of Service</a>
             </div>
-            <p class="copyright">© 2024 Wing AI. All rights reserved.</p>
+            <p class="copyright">© 2025 DocuGPT. All rights reserved.</p>
         </div>
     </footer>
 
