--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
+    <title>Privacy Policy - DocuGPT</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -25,89 +25,53 @@
 </head>
 <body>
     <h1>Privacy Policy</h1>
-    <p>Effective Date: January 31, 2025</p>
+    <p>Effective Date: February 10, 2025</p>
 
     <p>
-        This Privacy Policy describes how Wing AI ("we," "our," or "us") collects, uses, and protects your information. By using our application, you agree to this policy.
+        Thank you for using DocuChat! Your privacy is important to us. This Privacy Policy explains how we handle your information when you use our app.
     </p>
 
-    <h2>Information We Collect</h2>
+    <h2>1. Information We Do Not Collect</h2>
     <p>
-        When you use Wing AI, we may collect the following types of information:
-    </p>
-    <ul>
-        <li><strong>Personal Information:</strong> Information you provide when creating an account, such as your name, email address, and payment details.</li>
-        <li><strong>Usage Data:</strong> Information about your use of the app, including interactions, preferences, and app activity.</li>
-        <li><strong>Health Data:</strong> Data you input related to your fitness, nutrition, and wellness. This information is collected only with your explicit consent.</li>
-    </ul>
-
-    <h2>How We Use Your Information</h2>
-    <p>Your information is used to:</p>
-    <ul>
-        <li>Provide personalized services, including financial management, scheduling, and health insights.</li>
-        <li>Improve app performance and functionality through analytics.</li>
-        <li>Communicate updates, subscription details, and promotional offers (with your consent).</li>
-        <li>Comply with legal obligations and enforce our terms of use.</li>
-    </ul>
-
-    <h2>Subscriptions</h2>
-    <p>
-        Wing AI offers a monthly subscription at $7.99, which includes:
+        We are committed to your privacy. DocuChat is designed to operate with minimal data collection. We <strong>do not</strong> collect, store, or transmit any of the following:
     </p>
     <ul>
-        <li>Unlimited access to all app features.</li>
-        <li>AI-powered personal assistance for finances, scheduling, health, and more.</li>
-        <li>Priority customer support.</li>
+        <li>Personal Identifiable Information (PII)</li>
+        <li>Document Content: All document processing occurs locally on your device.</li>
+        <li>Chat Logs: Conversations are stored only on your device.</li>
     </ul>
-    <p>
-        Subscriptions renew automatically unless canceled at least 24 hours before the end of the current period. Payment will be charged to your Apple ID account at confirmation of purchase. You can manage your subscription and turn off auto-renewal in your Account Settings.
-    </p>
 
-    <h2>Health and Medical Information</h2>
+    <h2>2. Analytics (Optional)</h2>
     <p>
-        Wing AI provides health and wellness insights for informational purposes only. These insights are not a substitute for professional medical advice. Always consult a healthcare professional for medical concerns. Sources for health-related information include:
+        To help us improve DocuChat, we may collect anonymous, aggregated usage statistics. Participation in analytics is optional, and you can disable it in the app settings.
     </p>
     <ul>
-        <li><a href="https://www.who.int/" target="_blank">World Health Organization</a></li>
-        <li><a href="https://www.nih.gov/" target="_blank">National Institutes of Health</a></li>
-        <li><a href="https://www.ncbi.nlm.nih.gov/" target="_blank">National Center for Biotechnology Information</a></li>
+        <li>Usage Data: Frequency of use, feature usage, and crash reports.</li>
+        <li>No Personal Data: Analytics data is anonymized and cannot be linked back to you.</li>
     </ul>
 
-    <h2>Data Sharing</h2>
-    <p>We do not sell your data. Your information may be shared with third parties only in the following cases:</p>
+    <h2>3. Third-Party Services</h2>
+    <p>
+        DocuChat utilizes the following third-party services:
+    </p>
     <ul>
-        <li>To provide services (e.g., payment processors).</li>
-        <li>To comply with legal requirements.</li>
-        <li>To protect our rights or prevent fraud.</li>
+        <li>App Store: For app distribution, updates, and optional reviews.</li>
+        <li>Google Gemini API: For AI-powered document analysis. Data sent to Google is governed by Google's privacy policy.</li>
     </ul>
 
-    <h2>Data Security</h2>
+    <h2>4. Data Security</h2>
     <p>
-        We employ industry-standard security measures to protect your data. However, no system is completely secure, and we cannot guarantee absolute security.
+        We take reasonable measures to protect the information stored on your device. However, please be aware that no method of transmission over the internet or method of electronic storage is completely secure.
     </p>
 
-    <h2>Your Rights</h2>
-    <p>You have the right to:</p>
-    <ul>
-        <li>Access and update your personal information.</li>
-        <li>Request the deletion of your data.</li>
-        <li>Withdraw consent for data collection at any time.</li>
-    </ul>
-    <p>To exercise these rights, contact us at <a href="mailto:brendan@learnfusion.ai">brendan@learnfusion.ai</a>.</p>
-
-    <h2>Changes to This Policy</h2>
+    <h2>5. Changes to This Privacy Policy</h2>
     <p>
-        We may update this Privacy Policy from time to time. Changes will be posted in the app and on our website. Your continued use of the app constitutes acceptance of the updated policy.
+        We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.
     </p>
 
-    <h2>Contact Us</h2>
+    <h2>6. Contact Us</h2>
     <p>
-        If you have questions about this Privacy Policy, please contact us at:
-    </p>
-    <p>
-        <strong>Wing AI Support</strong><br>
-        Email: <a href="mailto:brendan@learnfusion.ai">brendan@learnfusion.ai</a><br>
-        Website: <a href="https://brendanpy.github.io/">https://brendanpy.github.io/</a>
+        If you have any questions about this Privacy Policy, please contact us at <a href="mailto:support@docuchat.app">support@docuchat.app</a>.
     </p>
 </body>
 </html>
