--- a/privacy.html
+++ b/privacy.html
@@ -71,7 +71,7 @@
 
     <h2>6. Contact Us</h2>
     <p>
-        If you have any questions about this Privacy Policy, please contact us at <a href="mailto:support@docuchat.app">support@docuchat.app</a>.
+        If you have any questions about this Privacy Policy, please contact us at <a href="mailto:brendan@learnfusion.com">support@docuchat.app</a>.
     </p>
 </body>
 </html>
