--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="nav-links">
                 <a href="#features">Features</a>
                 <a href="#showcase">Showcase</a>
-                <a href="#support">Support</a>
+                <a href="support.html">Support</a>
                 <a href="#download" class="cta-button-small">Download</a>
             </div>
         </div>
