--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <footer>
         <div class="footer-container">
             <div class="footer-links">
-                <a href="https://support.docuchat.app">Support</a>
+                <a href="support.html">Support</a>
                 <a href="privacy.html">Privacy Policy</a>
                 <a href="terms.html">Terms of Service</a>
             </div>
