--- a/index.html
+++ b/index.html
@@ -96,25 +96,10 @@
             <h2>Need Help?</h2>
             <p>We're here to support you every step of the way</p>
             <div class="support-grid">
-                <a href="mailto:support@docuchat.app" class="support-card">
+                <a href="mailto:brendan@learnfusion.ai" class="support-card">
                     <i class="fas fa-envelope"></i>
                     <h3>Email Support</h3>
                     <p>Get direct assistance from our support team</p>
-                </a>
-                <a href="https://support.docuchat.app" class="support-card">
-                    <i class="fas fa-book"></i>
-                    <h3>Documentation</h3>
-                    <p>Browse our detailed guides and FAQs</p>
-                </a>
-                <a href="https://community.docuchat.app" class="support-card">
-                    <i class="fas fa-users"></i>
-                    <h3>Community</h3>
-                    <p>Join our user community for tips and support</p>
-                </a>
-                <a href="https://support.docuchat.app/tutorials" class="support-card">
-                    <i class="fas fa-video"></i>
-                    <h3>Video Tutorials</h3>
-                    <p>Watch step-by-step video guides</p>
                 </a>
             </div>
         </div>
