--- a/support.html
+++ b/support.html
@@ -123,7 +123,7 @@
         <div class="support-section">
             <h2>Additional Resources</h2>
             <ul>
-                <li><a href="terms.html">Terms of Service</a></li>
+                <li><a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">Terms of Service</a></li>
             </ul>
         </div>
     </div>
